# Homomorphic-face-encyption

./: .dockerignore  .env.railway.template  .env.template  .gitignore  .pre-commit-config.yaml  .railwayignore  Dockerfile  Dockerfile.railway  Procfile  RAILWAY_DEPLOYMENT.md  README.md  app_logs.txt  benchmark_1_to_N_results.csv  benchmark_report.json  camera_test.py  ckks_test.py  docker-compose.yml  embedding_test.py  init.sql  pyproject.toml  quick_test.py  railway.json  railway.toml  requirements.txt  simple_server.py  simple_test.py  validation_test.py
.agent/workflows/: deploy-railway.md
benchmarks/: benchmark_matching.py
frontend/: .railwayignore  Dockerfile  Dockerfile.railway  nginx.conf  package.json  postcss.config.cjs  railway.json  railway.toml  tailwind.config.cjs  vite.config.js
frontend/src/: App.css  App.jsx  ConsentDashboard.jsx  ConsentOnboarding.jsx  index.css
frontend/src/components/: AnimatedBackground.jsx  Button.jsx
frontend/src/utils/: api.js
src/homomorphic_face_encryption/: __init__.py  app.py
src/homomorphic_face_encryption/api/: __init__.py  authentication_routes.py  enrollment_routes.py  routes.py  security_middleware.py
src/homomorphic_face_encryption/biometric/: __init__.py  embedding_extractor.py  face_detector.py  face_processor.py  face_service.py
src/homomorphic_face_encryption/consent/: __init__.py  manager.py
src/homomorphic_face_encryption/crypto/: __init__.py  ckks_encryptor.py  fhe.py  openfhe_setup.py
src/homomorphic_face_encryption/database/: __init__.py  encryption_utils.py  models.py
tests/: test_ckks_operations.py  test_e2e_authentication.py  test_face_detector.py
