[tool.poetry]
name = "homomorphic-face-encryption"
version = "0.1.0"
description = "Privacy-preserving facial recognition system"
authors = ["Kartik <kartik@example.com>"]
readme = "README.md"
packages = [{include = "homomorphic_face_encryption", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
facenet-pytorch = "*"
mtcnn = "*"
opencv-python = "*"
flask = "*"
flask-jwt-extended = "*"
sqlalchemy = "*"
psycopg2-binary = "*"
numpy = "*"
scikit-learn = "*"
pillow = "*"
# openfhe-python = "*"  # Not available on PyPI, install separately if needed
cryptography = "^46.0.3"
redis = "^7.1.0"
asyncpg = "^0.31.0"

[tool.poetry.scripts]
app = "homomorphic_face_encryption.app:create_app"

[tool.poetry.group.dev.dependencies]
black = "*"
flake8 = "*"
mypy = "*"
pre-commit = "*"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pytest-benchmark = "^5.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
